// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots css/base/particles/alignLineHeight Align Line Height 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeight"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeight"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
</div>
`;

exports[`Storyshots css/base/particles/alignLineHeight Align Line Height Md 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeightMd"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeightMd"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
</div>
`;

exports[`Storyshots css/base/particles/alignLineHeight Align Line Height Sm 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeightSm"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <div
        className="alignLineHeightSm"
        style={
          Object {
            "border": "1px solid orange",
          }
        }
      >
        tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato tomato 
      </div>
    </div>
  </body>
</div>
`;
